Improve company service performance and provider query efficiency